--- a/build.gradle
+++ b/build.gradle
@@ -67,12 +67,26 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.0.2.RELEASE'
     // mybatis
     compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2")
+    // oracle
     compile 'com.oracle:ojdbc6:11.2.0.4'
 
-    // groovy
+    // groovy : logback.groovy and ORM(mybatis) mapper.groovy
     compile 'org.codehaus.groovy:groovy-all:2.4.10'
 
-    testCompile 'junit:junit:4.12'
-    // test
+
+    // StringUtils
+    compile 'org.apache.commons:commons-lang3:3.5'
+
+    // HolidayUtil->ChineseCalendar
+    compile group: 'com.ibm.icu', name: 'icu4j', version: '61.1'
+
+
+    // Codec : Hex
+    compile 'commons-codec:commons-codec:1.9'
+
+
+    // test : need @SpringBootConfiguration or @SpringBootApplication
     testCompile ("org.springframework.boot:spring-boot-starter-test:2.0.2.RELEASE")
+    testCompile 'junit:junit:4.12'
+
 }
