--- a/build.gradle
+++ b/build.gradle
@@ -85,6 +85,10 @@ dependencies {
     compile 'commons-codec:commons-codec:1.9'
 
 
+    // websocket
+    compile group: 'org.java-websocket', name: 'Java-WebSocket', version: '1.3.0'
+
+
     // test : need @SpringBootConfiguration or @SpringBootApplication
     testCompile ("org.springframework.boot:spring-boot-starter-test:2.0.2.RELEASE")
     testCompile 'junit:junit:4.12'
