--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,9 @@ apply plugin: 'groovy'
 repositories {
     jcenter()
     mavenCentral()
-    maven { url 'http://mvn.skplanet.com/content/groups/public/' }
-    maven { url 'http://mvn.skplanet.com/content/repositories/thirdparty/' }
-    maven { url 'http://mvn.skplanet.com/content/repositories/snapshots/' }
+//    maven { url 'http://mvn.skplanet.com/content/groups/public/' }
+//    maven { url 'http://mvn.skplanet.com/content/repositories/thirdparty/' }
+//    maven { url 'http://mvn.skplanet.com/content/repositories/snapshots/' }
 }
 
 // set profiles
@@ -68,7 +68,8 @@ dependencies {
     // mybatis
     compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2")
     // oracle
-    compile 'com.oracle:ojdbc6:11.2.0.4'
+//    compile 'com.oracle:ojdbc6:11.2.0.4'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.12'
 
     // groovy : logback.groovy and ORM(mybatis) mapper.groovy
     compile 'org.codehaus.groovy:groovy-all:2.4.10'
