--- a/build.gradle
+++ b/build.gradle
@@ -94,7 +94,7 @@ dependencies {
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.46'
 
     // jackson for LocalDateTime
-    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.6'
+//    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.6'
 //    compile group: 'org.mybatis', name: 'mybatis-typehandlers-jsr310', version: '1.0.2'
 
 
